@@ -591,7 +591,16 @@ int range_fetch_read_http_headers(struct range_fetch* rf)
     }
     c = atoi(p+1);
     if (c != 206) {
-      fprintf(stderr,"bad status code %d\n",c);
+      if (c >= 300 && c < 400) {
+        fprintf(stderr,"\nzsync received a redirect/further action required status code: %d\nzsync specifically refuses to proceed when a server requests further action. This is because zsync makes a very large number of requests per file retrieved, and so if zsync has to perform additional actions per request, it further increases the load on the target server. The person/entity who created this zsync file should change it to point directly to a URL where the target file can be retrieved without additional actions/redirects needing to be followed.\nSee http://zsync.moria.orc.uk/server-issues\n", c);
+      }
+      else if (c == 200) {
+        fprintf(stderr, "\nzsync received a data response (code %d) but this is not a partial content response\nzsync can only work with servers that support returning partial content from files. The person/entity creating this .zsync has tried to use a server that is not returning partial content. zsync cannot be used with this server.\nSee http://zsync.moria.orc.uk/server-issues\n", c);
+      }
+      else {
+        /* generic error message otherwise */
+          fprintf(stderr,"bad status code %d\n",c);
+      }
       return -1;
     }
     if (*(p-1) == '0') { /* HTTP/1.0 server? */
