@@ -1,4 +1,4 @@
-PAGES:=author client server index papers downloads
+PAGES:=author client server index papers downloads server-issues
 OTHER:=style.css paper200501 paper200503 images download
 
 UPHOST:=www-uploader@moria
