@@ -41,6 +41,7 @@ application/x-zsync             zsync
 </pre>
 <p>in your <code>mime.types</code>.</p>
 <p>Set suitable content expiry headers on .zsync and other downloads, to help web proxies work out how long they can cache it. zsync itself always goes back to the server, although with the -k option it will use If-Modified-Since headers to avoid redownloading the .zsync unnecessarily.</p>
-<p>zsync follows redirects on the .zsync file, and sets suitable referer headers. Do not point the full download at content which is negotiated: it must always be exactly the same as the file supplied to (or generated by, with -z) zsyncmake.</p>
+<p>Do not point the full download at content which is negotiated: it must always be exactly the same as the file supplied to (or generated by, with -z) zsyncmake.</p>
+<p>See also <a href="server-issues">the page on client/server issues</a>, which contains useful info for webmasters and also explains errors that could be seen by users.</p>
 
 #include "foot.gtml"
